[package]
name = "dotenv-parser"
version = "0.1.3"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
license = "ISC"

description = "Pest-based parser for .env files"
homepage = "https://github.com/rubik/dotenv-parser"
repository = "https://github.com/rubik/dotenv-parser"
keywords = ["configuration", "pest", "parser", "env", "dotenv"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
